syntax = "proto3";
package common;

import "global_import.proto";

option go_package = "card-game-server-prototype/pkg/grpc/commongrpc";
option csharp_namespace = "Joker.Gameplay.Common";
option (csharp_assembly) = "Joker.Gameplay.Common";
option (csharp_access) = public;

// READ
// CnChessColorType color = (piece & 0xf00);
// CnChessPieceType type = (piece & 0x0f0);
// int index = piece & 0x00f;

// WRITE
// piece = (int)color | (int)type | index;

enum CnChessColorType {
    CN_CHESS_COLOR_TYPE_INVALID = 0;
    CN_CHESS_COLOR_TYPE_RED = 0x100;
    CN_CHESS_COLOR_TYPE_BLACK = 0x200;
}

enum CnChessPieceType {
    CN_CHESS_PIECE_TYPE_INVALID = 0;
    CN_CHESS_PIECE_TYPE_GENERAL = 0x10;
    CN_CHESS_PIECE_TYPE_ADVISOR = 0x20;
    CN_CHESS_PIECE_TYPE_ELEPHANT = 0x30;
    CN_CHESS_PIECE_TYPE_CHARIOT = 0x40;
    CN_CHESS_PIECE_TYPE_HORSE = 0x50;
    CN_CHESS_PIECE_TYPE_CANNON = 0x60;
    CN_CHESS_PIECE_TYPE_SOLDIER = 0x70;
}

enum CnChessPiece {
    CN_CHESS_PIECE_INVALID = 0;
    CN_CHESS_PIECE_GENERAL_RED = 0x110;
    CN_CHESS_PIECE_ADVISOR_RED_0 = 0x120;
    CN_CHESS_PIECE_ADVISOR_RED_1 = 0x121;
    CN_CHESS_PIECE_ELEPHANT_RED_0 = 0x130;
    CN_CHESS_PIECE_ELEPHANT_RED_1 = 0x131;
    CN_CHESS_PIECE_CHARIOT_RED_0 = 0x140;
    CN_CHESS_PIECE_CHARIOT_RED_1 = 0x141;
    CN_CHESS_PIECE_HORSE_RED_0 = 0x150;
    CN_CHESS_PIECE_HORSE_RED_1 = 0x151;
    CN_CHESS_PIECE_CANNON_RED_0 = 0x160;
    CN_CHESS_PIECE_CANNON_RED_1 = 0x161;
    CN_CHESS_PIECE_SOLDIER_RED_0 = 0x170;
    CN_CHESS_PIECE_SOLDIER_RED_1 = 0x171;
    CN_CHESS_PIECE_SOLDIER_RED_2 = 0x172;
    CN_CHESS_PIECE_SOLDIER_RED_3 = 0x173;
    CN_CHESS_PIECE_SOLDIER_RED_4 = 0x174;
    CN_CHESS_PIECE_GENERAL_BLACK = 0x210;
    CN_CHESS_PIECE_ADVISOR_BLACK_0 = 0x220;
    CN_CHESS_PIECE_ADVISOR_BLACK_1 = 0x221;
    CN_CHESS_PIECE_ELEPHANT_BLACK_0 = 0x230;
    CN_CHESS_PIECE_ELEPHANT_BLACK_1 = 0x231;
    CN_CHESS_PIECE_CHARIOT_BLACK_0 = 0x240;
    CN_CHESS_PIECE_CHARIOT_BLACK_1 = 0x241;
    CN_CHESS_PIECE_HORSE_BLACK_0 = 0x250;
    CN_CHESS_PIECE_HORSE_BLACK_1 = 0x251;
    CN_CHESS_PIECE_CANNON_BLACK_0 = 0x260;
    CN_CHESS_PIECE_CANNON_BLACK_1 = 0x261;
    CN_CHESS_PIECE_SOLDIER_BLACK_0 = 0x270;
    CN_CHESS_PIECE_SOLDIER_BLACK_1 = 0x271;
    CN_CHESS_PIECE_SOLDIER_BLACK_2 = 0x272;
    CN_CHESS_PIECE_SOLDIER_BLACK_3 = 0x273;
    CN_CHESS_PIECE_SOLDIER_BLACK_4 = 0x274;
}
